chore: fixed client user profile
